# AiyaEffectsAndroid

./: .gitignore  .project  AiyaSDK说明.md  build.gradle  gradle.properties  readme.md  readme_en.md  settings.gradle
AiyaEffectSDK/AyBeauty/: .project  CMakeLists.txt  buBeauty.gradle  build.gradle
AiyaEffectSDK/AyBeauty/src/main/: AndroidManifest.xml
AiyaEffectSDK/AyBeauty/src/main/cpp/: AiyaBeauty.cpp  AyBeauty_jni.cpp  AyBigEye_jni.cpp  AySlimFace_jni.cpp
AiyaEffectSDK/AyBeauty/src/main/java/com/aiyaapp/aiya/: AiyaBeauty.java  AyBeauty.java  AyBigEye.java  AySlimFace.java
AiyaEffectSDK/AyBeauty/src/main/java/com/aiyaapp/aiya/filter/: AyBeautyFilter.java  AyBigEyeFilter.java  AyThinFaceFilter.java
AiyaEffectSDK/AyBeauty/src/main/res/values/: strings.xml
AiyaEffectSDK/AyCore/: .project  CMakeLists.txt  buCore.gradle  build.gradle  buildJCenter.gradle
AiyaEffectSDK/AyCore/src/main/: AndroidManifest.xml
AiyaEffectSDK/AyCore/src/main/cpp/: AiyaCore_jni.cpp  AiyaEffectCore.cpp  AyCore_jni.cpp  Log.cpp  NdkTools.cpp  ResThread.h
AiyaEffectSDK/AyCore/src/main/include/: AyCoreAuth.h  Log.h  NdkTools.h  Observer.h
AiyaEffectSDK/AyCore/src/main/java/com/aiyaapp/aiya/: AiyaEffects.java  AyCore.java  Const.java  IEventListener.java  WeakEventListener.java
AiyaEffectSDK/AyCore/src/main/java/com/aiyaapp/aiya/base/: IComponent.java  IEffect.java  IFaceTracker.java
AiyaEffectSDK/AyCore/src/main/res/values/: strings.xml
AiyaEffectSDK/AyEffect/: .project  CMakeLists.txt  buGift.gradle  build.gradle
AiyaEffectSDK/AyEffect/src/main/: AndroidManifest.xml
AiyaEffectSDK/AyEffect/src/main/cpp/: AiyaGiftEffect_jni.cpp  AyEffect_jni.cpp  DrawEffects.h
AiyaEffectSDK/AyEffect/src/main/include/: FaceData.h  RenderSticker.h  trackThread.h
AiyaEffectSDK/AyEffect/src/main/java/com/aiyaapp/aiya/: AiyaGiftEffect.java  AyEffect.java  WeakAnimListener.java
AiyaEffectSDK/AyEffect/src/main/java/com/aiyaapp/aiya/render/: AiyaEffectTextureView.java  AiyaGiftFilter.java  AiyaMutilEffectView.java  AnimListener.java  LowEGLHelper.java
AiyaEffectSDK/AyEffect/src/main/res/values/: strings.xml
AiyaEffectSDK/AyFaceTrack/: .project  CMakeLists.txt  buTrack.gradle  build.gradle
AiyaEffectSDK/AyFaceTrack/src/main/: AndroidManifest.xml
AiyaEffectSDK/AyFaceTrack/src/main/assets/config/: det1.param  det2.param  det3.param  jk_300_new.wfm
AiyaEffectSDK/AyFaceTrack/src/main/cpp/: AiyaTrack.h  AiyaTrack2_jni.cpp  AiyaTrack_jni.cpp  AyFaceTrack_jni.cpp
AiyaEffectSDK/AyFaceTrack/src/main/include/: AiyaTrack.h  BaseTrack.h
AiyaEffectSDK/AyFaceTrack/src/main/java/com/aiyaapp/aiya/: #AiyaTracker.java#  AiyaTracker.java  AyFaceTrack.java
AiyaEffectSDK/AyFaceTrack/src/main/java/com/aiyaapp/aiya/filter/: AyTrackFilter.java
AiyaEffectSDK/AyFaceTrack/src/main/res/values/: strings.xml
AiyaEffectSDK/AyShortVideoEffect/: .project  CMakeLists.txt  buShortVideo.gradle  build.gradle
AiyaEffectSDK/AyShortVideoEffect/src/main/: AndroidManifest.xml
AiyaEffectSDK/AyShortVideoEffect/src/main/assets/res/shaders/: line.frag  line.vert  mask.frag  pass2.frag  pass2.vert  video.frag  video.vert
AiyaEffectSDK/AyShortVideoEffect/src/main/cpp/: AiyaShaderEffect_jni.cpp  AyShortVideoEffect_jni.cpp
AiyaEffectSDK/AyShortVideoEffect/src/main/include/: AiyaEffectInterface.h
AiyaEffectSDK/AyShortVideoEffect/src/main/java/com/aiyaapp/aiya/: AiyaShaderEffect.java  AyShortVideoEffect.java  SluggardSvEffectTool.java
AiyaEffectSDK/AyShortVideoEffect/src/main/java/com/aiyaapp/aiya/filter/: BaseShortVideoFilter.java  SvBlackMagicFilter.java  SvBlackWhiteTwinkleFilter.java  SvCutSceneFilter.java  SvDysphoriaFilter.java  SvFinalZeligFilter.java  SvFluorescenceFilter.java  SvFourScreenFilter.java  SvHallucinationFilter.java  SvRollUpFilter.java  SvSeventysFilter.java  SvShakeFilter.java  SvSpiritFreedFilter.java  SvSplitScreenFilter.java  SvThreeScreenFilter.java  SvTimeTunnelFilter.java  SvVirtualMirrorFilter.java
AiyaEffectSDK/AyShortVideoEffect/src/main/java/com/aiyaapp/aiya/shadereffect/filter/: BlackAndWhiteTwinkle.java  BlackMagic.java  CoolFilterFactory.java  None.java  (+17 more)
AiyaEffectSDK/AyShortVideoEffect/src/main/res/values/: strings.xml
AiyaEffectSDK/libyuv/: .project  CMakeLists.txt  build.gradle
AiyaEffectSDK/libyuv/src/main/: AndroidManifest.xml
AiyaEffectSDK/libyuv/src/main/cpp/: libyuv_jni.cpp
AiyaEffectSDK/libyuv/src/main/cpp/libyuv/: convert_argb.cc  convert_from.cc  row_any.cc  row_msa.cc  row_neon.cc  row_neon64.cc
AiyaEffectSDK/libyuv/src/main/java/com/aiyaapp/aiya/: AYYuvUtil.java
AiyaEffectSDK/libyuv/src/main/res/values/: strings.xml
(+579 files in other folders)
