cmake_minimum_required(VERSION 3.4.1)
# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/output)
set(compile-path ${CMAKE_SOURCE_DIR}/libs/${ANDROID_ABI})
include_directories(../include)
aux_source_directory(src/main/cpp cpp_src)
add_library(AyCoreSdkJni SHARED ${cpp_src})
find_library(android-lib android)
find_library(log-lib log)
target_link_libraries(AyCoreSdkJni ${android-lib} ${log-lib} ${compile-path}/libAyCoreSdk.so)